--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-axios": "^0.17.1",
+    "react-native-drawer": "^2.5.1",
+    "react-native-drawer-menu": "^0.2.5",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-navigation-drawer-extension": "^4.3.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
