--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-native-navigation-drawer-extension": "^4.3.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-side-drawer": "^2.0.0",
+    "react-native-side-menu": "^1.1.3",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
   },
